# TATA

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: autoencoder.yaml  data.yaml  experiments.yaml  metrics.yaml  nids.yaml  rl.yaml
scripts/: collect_offline_data.py  evaluate_rl_agent.py  preprocess_data.py  reproduce_paper.py  run_assessment.py  run_preliminary.py  train_rl_agent.py
scripts/experiments/: run_ablation.py  run_augmentation_eval.py  run_comparative_analysis.py  run_correlation.py  run_split_select_retrain.py
scripts/qemu/: README.md  build_cloud_init.sh  testbed.sh
tata/datasets/: __init__.py  loaders.py  preprocess.py  splits.py
tata/embedding/: clustering.py  encoder.py
tata/experiments/: __init__.py  ablation_ae.py  augmentation.py  comparative.py  correlation.py
tata/metrics/: assessment.py  diversity.py  proximity.py  scarcity.py
tata/models/: __init__.py  autoencoder.py  hpo.py  training.py
tata/models/autoencoders/: __init__.py  contrastive.py  vanilla.py
tata/models/nids/: __init__.py  base.py  dnn.py  random_forest.py  svm.py  train.py
tata/rl/: environment.py  fqe.py  hpo.py  offline_dataset.py  reward.py
tata/testbed/: base.py  flow_converter.py  mock_testbed.py  qemu_testbed.py  scenarios.py
