[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tata"
version = "0.1.0"
description = "TATA: Benchmark NIDS Test Sets Assessment and Targeted Augmentation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "optuna>=3.4.0",
    "vendi-score>=0.0.3",
    "d3rlpy>=2.0.0",
    "gymnasium>=0.29.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tata*"]
